# 21f-pa01-arthur-zhang

./: CMakeLists.txt  README.md
.github/: build.yaml
.github/workflows/: main.yml
src/: CMakeLists.txt  free.cpp  free.h  main.cpp  manager.cpp  manager.h  painting.cpp  painting.h  wall.cpp  wall.h
test/: gallery10.txt  gallery100.txt  gallery25.txt  gallery50.txt
